# installer-dev-tools

./: .gitignore  AGENTS.md  OWNERS  OWNERS_TEMPLATE.md  README.md  create-aks.sh  pull-secret-propagation-guide.md  release-version.sh
.github/: lint-shell.yml
.github/workflows/: lint-makefile.yml  lint-py.yml  lint-shell.yml  sync-images.yml
Compliance/: pod-enforce.sh
aks/: create-aks.sh
bundle-generation/: MCEconfig.yaml  bundles-to-charts.py  common.py  generate-bundles.py  generate-charts.py  generate-sha-commits.py  generate_sha_commits.py  move-charts.py  pipeline_manifest_sha_sync.py  sync-pipeline-manifest-sha.py  utils.py
bundle-generation/chart-templates/: MCEChart.yaml  MCHChart.yaml
config/: charts-config.tpl  config.tpl  image-sync.yaml
custom-bundle-generation/: CLONED_BUNDLE_GUIDE.md  CUSTOM_BUNDLE_GUIDE.md
docs/: IMAGE_SYNC.md  additional-improvements.md
installertui/: README.md  pyproject.toml  release-version.sh
installertui/installertui/: main.py
jira-pr-cli/: CROSS_PLATFORM_TESTING.md  INSTALL.md  README.md  setup.py
jira-pr-cli/jira_pr_summary/: __init__.py  __main__.py  cli.py  config.py
scripts/: README.md
scripts/aks/: create-aks.sh  delete-aks.sh
scripts/bundle-generation/: bundles-to-charts.py  generate-charts-refactored-demo.py  generate-charts.py  helper.py  move-charts.py  olm-bundles-to-helm-charts.py  onboard-new-components.py  validate-image-keys.py
scripts/bundle_generation/: copy_helm_charts.py  helm_to_customized_helm_charts.py  olm_bundles_to_helm_charts.py  sync_sha_commits.py
scripts/qe/: .gitignore  (+11 more)
(+66 files in other folders)
